--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@ main {
   height: 100%;
 }
 
+main > section:nth-child(4){
+  height: 60%;
+}
+
 nav {
   width: 100%;
   height: 5%;
@@ -32,9 +36,10 @@ nav > div {
   align-items: center;
   font-size: 1em;
   margin-bottom: 1em;
+  transition: all 1000ms;
 }
 .friend:hover {
-  background-color: grey;
+  background-color: rgb(224, 224, 224);
 }
 
 .friend > div:nth-child(1) {
@@ -42,7 +47,9 @@ nav > div {
   justify-content: space-between;
   align-items: center;
   width: 40%;
+  max-width: 150px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .friend img {
@@ -69,6 +76,7 @@ nav > div {
   align-items: center;
   padding: 0 1rem;
   margin-bottom: 0.5rem;
+  overflow: hidden;
 }
 
 .section_box hr {
@@ -84,8 +92,24 @@ nav > div {
   font-size: 0.7em;
 }
 .section_box .friend_box {
-  border: 1px solid black;
   width: 100%;
-  height: 75px;
-  margin-top: 1em;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.friend_box > div {
+  width: 95%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.section_box img {
+  border-radius: 0.8rem;
+  height: 50px;
+  width: 50px;
+  margin-right: 1em;
 }
