--- a/style.css
+++ b/style.css
@@ -4,16 +4,28 @@
 @import "css/chat.css";
 @import "css/setting.css";
 
-@media all and (min-width: 560px) {
-  body{
-    visibility: hidden;
+@media all and (min-width: 600px) {
+  #main_body{
+    display: none;
+  }
+  #close {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 76px;
+    background-color: aquamarine;
   }
 }
 
-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
+@media all and (max-width: 600px) {
+  #main_body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+  }
 }
+
